# pycargoebuild

./: .gitignore  LICENSE  README.rst  pyproject.toml  tox.ini
.github/workflows/: ci.yaml
data/share/bash-completion/completions/: pycargoebuild
integration_test/: alass-2.0.0.ebuild  attest-0.1.0.ebuild  bindgen-0.63.0.ebuild  blake3-0.3.3.ebuild  cryptography-38.0.3.ebuild  fractal-5.0.0.ebuild  jaq-0.10.0.ebuild  lemmy_server-0.18.0.ebuild  license-mapping.conf  mdbook-linkcheck-0.7.7.ebuild  milkshake-terminal-0.0.0.ebuild  news_flash_gtk-0.0.0.ebuild  qiskit-terra-0.22.3.ebuild  ruffle_core-0.1.0.ebuild  rustic-rs-0.5.0.ebuild  rustls-0.20.7.ebuild  rustworkx-0.12.1.ebuild  setuptools-rust-1.5.2.ebuild  synapse-0.1.0.ebuild  test_integration.py  watchfiles-0.18.1.ebuild
pycargoebuild/: __init__.py  __main__.py  cargo.py  ebuild.py  fetch.py  format.py  license-mapping.conf  license.py  path.py
test/: conftest.py  test_cargo.py  test_ebuild.py  test_fetch.py  test_format.py  test_license.py  test_path.py  testdata.py
